<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002147"
    android:orientation="vertical"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/questionNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="250dp"
        android:text="Question 1"
        android:textAlignment="gravity"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/question"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/question_1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#F2F3F4"
        android:textSize="25sp"
        android:textStyle="normal" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_below="@+id/question"
        android:layout_gravity="fill"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="2">


        <androidx.cardview.widget.CardView
            android:id="@+id/quizEasy"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#cce4ff"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/optionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/option_1A"
                    android:textAlignment="center"
                    android:textColor="#002147"
                    android:textSize="25sp">

                </TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/quizMedium"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#cce4ff"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/optionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/option_1B"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/quizHard"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#cce4ff"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/optionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/option_1C"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/quizExit"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#cce4ff"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/optionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/option_1D"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </GridLayout>

    <TextView
        android:id="@+id/selectoption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="gone" />

    <TextView
        android:id="@+id/corOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hello"
        android:visibility="gone" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="700dp"
        android:text="Score-0/10"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="700dp"
        android:indeterminate="false"
        android:progressTint="#F9FBFD" />

</RelativeLayout>